# ProofingChamber2

./: .git-force-push-marker  .gitignore  .gitmodules  ALL_12_WIFI_FIXES_COMPLETE.md  ALL_14_WIFI_FIXES_FINAL.md  ALL_WIFI_FIXES_SUMMARY.md  AP_VISIBILITY_FIX.md  ARCHITECTURE_PLAN.md  BUILD.md  BUILD_VERIFICATION.md  CAPTIVE_PORTAL_FIX.md  CAPTIVE_PORTAL_STATE_FIX.md  COMPILATION_FIX.md  COMPLETE_WIFI_FIX_FINAL.md  COMPLETE_WIFI_FIX_SUMMARY.md  CREDENTIALS_PRESERVATION_FIX.md  ESP32_ASYNC_WIFIMANAGER_SWITCH.md  ESP32_C3_TIMING_FIX.md  EXACT_VERSION_PINNING_FIX.md  FEEDBACK_RESPONSE.md  FINAL_WIFI_SOLUTION_SUMMARY.md  LIBRARY_VERSION_FIX.md  MENU_ACTIONS_SUMMARY.md  Makefile  PORTAL_TIMEOUT_FIX.md  PORT_CONFLICT_FIX.md  PULL_REQUEST_SUMMARY.md  README.md  REGISTRY_VERSION_FIX.md  TZAPU_WIFIMANAGER_FINAL.md  VIRTUAL_CONTROLS_ARCHITECTURE.md  WEB_ARCHITECTURE.md  WEB_INTERFACE_JOURNEY.md  WEB_INTERFACE_VISUAL_GUIDE.md  WIFI_FIXES_VISUAL_SUMMARY.md  WIFI_FIX_DOCUMENTATION.md  WIFI_FIX_SUMMARY.md  WIFI_FIX_VISUAL.md  WIFI_PERSISTENCE_FIX.md  build.sh  (+3 more)
.github/: copilot-instructions.md
docs/: ARDUINO_TO_ESP_IDF_MIGRATION.md  GRAPHICS_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md
firmware/: .gitignore  README.md  TESTING_CHECKLIST.md  WEB_IMPLEMENTATION.md  WEB_INTERFACE.md  WEB_TIMING_DISPLAY.md  platformio.ini
firmware/test/: CMakeLists.txt  README.md  test_simple_time.cpp  test_storage.cpp
firmware/test/mocks/: Arduino.cpp  Arduino.h  DallasTemperature.cpp  DallasTemperature.h  DebugUtils.h  OneWire.cpp  OneWire.h  Preferences.cpp  Preferences.h  U8g2lib.cpp  U8g2lib.h  WiFiManager.cpp  WiFiManager.h
hardware/: README.md  fp-lib-table  proofingChamber.kicad_pcb  proofingChamber.kicad_prl  proofingChamber.kicad_pro  proofingChamber.kicad_sch  sym-lib-table
src/: AppContext.h  AppContextDecl.h  DS18B20Manager.cpp  DS18B20Manager.h  DebugUtils.h  Display.cpp  Display.h  DisplayManager.cpp  (+29 more)
(+162 files in other folders)
